# jarvis

./: .gitignore  README.md
.github/workflows/: agent-triage.yml
agents/agent-triage/: .dockerignore  Dockerfile  Dockerfile-frontend  README.md  docker-compose.yaml  pyproject.toml  rename-docker-image-4-registry.sh  requirements.in  requirements.txt
agents/agent-triage/docker/: crontab.template  entrypoint.sh
agents/agent-triage/frontend/: .gitignore  README.md  package-lock.json  package.json
agents/agent-triage/frontend/app/: layout.tsx  page.tsx
agents/agent-triage/frontend/app/api/auth/verify/: route.ts
agents/agent-triage/frontend/app/api/emails/: route.ts
agents/agent-triage/frontend/components/: EmailDetail.tsx  EmailForm.tsx  PasswordGate.tsx  PendingEmails.tsx
agents/agent-triage/frontend/lib/: emailFormatter.ts  imapClient.ts
agents/agent-triage/rules/: challenge-requirements.md  email-format.md
agents/agent-triage/src/agent_triage/: __init__.py  config.py  email_client.py  epic_generator.py  llm_client.py  logger.py  main.py  s3_client.py  smtp_client.py
agents/agent-triage/tests/: test_email_client.py  test_epic_generator.py  test_llm_client.py  test_s3_client.py  test_smtp_client.py
agents/agent-triage/tests/end2end/: conftest.py  test_email_endpoints.py  test_llm_endpoints.py  test_reply_endpoints.py  test_s3_endpoints.py
prompts/: agent-triage-requirements.md  initial-prompt.md
