[project]
name = "agent-triage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "boto3==1.42.55",
    "botocore==1.42.55",
    "coverage==7.13.4",
    "github-copilot-sdk",
    "httpx>=0.27.0",
    "iniconfig==2.3.0",
    "pybreaker>=1.2.0",
    "tenacity>=9.0.0",
    "jmespath==1.1.0",
    "markdown==3.10.2",
    "packaging==26.0",
    "pluggy==1.6.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydantic-settings==2.13.1",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "pytest-cov==7.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "s3transfer==0.16.0",
    "six==1.17.0",
    "structlog==25.5.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
]

[tool.uv.sources]
github-copilot-sdk = { git = "https://github.com/github/copilot-sdk.git", subdirectory = "python", rev = "f0909a78ce6c242f1f07e91b72ab7a7d8c910531" }

[tool.pytest.ini_options]
# Default test paths — end2end tests are excluded unless explicitly targeted.
testpaths = ["tests"]
pythonpath = ["src"]
# Exclude end2end from the default run (run them with: pytest tests/end2end/ or pytest -m e2e)
addopts = "--ignore=tests/end2end"
asyncio_mode = "auto"
markers = [
    "e2e: end-to-end tests that hit real external services (deselect with '-m not e2e')",
]

[tool.coverage.run]
source = ["src/agent_triage"]
branch = true
omit = [
    "src/agent_triage/__pycache__/*",
    "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "htmlcov"
title = "agent-triage coverage report"
